# LearningSQL

./: pyproject.toml
Insee/: METADATA.json  README.md
Insee/notebooks/: 00.Prepare_your_environment.ipynb  01.Retriving_data.ipynb  02.Filtering_data.ipynb  03.GroupBy_and_OrderBy.ipynb  04.Case_statement.ipynb  05.Join.ipynb
Insee/utils/: populate_db.py
Oreilly_getting_started_with_sql/: doc.md
Oreilly_getting_started_with_sql/database/: extra_practice_database_bad.sql  rexon_metals.sql  surgetech_conference.sql
Oreilly_getting_started_with_sql/k8s/: populate_weather_station.yaml
Oreilly_getting_started_with_sql/notebook/: 01.Retriving_data.ipynb  01.Retriving_data.md  02.Filtering_data.ipynb  02.Filtering_data.md  03.GroupBy_and_OrderBy.md  04.Case_statement.md  05.Join.md  06.Building_database.md  07.Managing_data_in_database.md  Appendix_01.Handle_many_to_many_relation.md
SQL_practice_problems/: README.md
SQL_practice_problems/data_base/: northwind_data.sql  northwind_ddl.sql
SQL_practice_problems/notebook/: 0.database_setup.ipynb  1.database_setup.ipynb  2.Easy_questions.ipynb  3.Median_questions.ipynb  4.Hard_questions.ipynb  5.Hell_questions.ipynb  TP_Chap3_SQL-Advanced_JOIN.ipynb  TP_Chap3_SQL-Advanced_JOIN_Corr.ipynb  TP_Chap3_SQL-Advanced_TCL.ipynb  TP_Chap3_SQL-Basic_DDL.ipynb  TP_Chap3_SQL-Basic_DDL_Corr.ipynb  TP_Chap3_SQL-Basic_DML.ipynb  TP_Chap3_SQL-Basic_DML_Corr.ipynb  TP_Chap4_Advanced_Objects.ipynb  TP_Chap4_Advanced_Objects_Corr.ipynb  TP_Chap5_PLPGSQL_CORRECTIONL.ipynb  TP_Chap5_PLPGSQL_ENONCE.ipynb  (+1 more)
k8s/: job_populate.yaml
(+14 files in other folders)
