[tool.poetry]
name = "learningsql"
version = "0.1.0"
description = ""
authors = ["pengfei <liu.pengfei@hotmail.fr>"]

[tool.poetry.dependencies]
python = "^3.8"
SQLAlchemy = "^1.4.28"
ipython-sql = "^0.4.0"
psycopg2-binary = "^2.9.3"

[tool.poetry.dev-dependencies]
jupyter = "^1.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
